# GFXR_layers

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
android/: .gitignore  AndroidManifest.xml  settings.gradle
android/jni/: Android.mk  Application.mk
android/perfetto_layer/: CMakeLists.txt
android/perfetto_layer/src/main/: AndroidManifest.xml
base_layer/: base_layer.h  base_layer.inc  base_layer_logging.inc  child_layer.h  logging.h  platform_types.h
layers/: CMakeLists.txt
layers/342/: 342_layer.cpp
layers/perfetto/: CMakeLists.txt  README.md  Readme.md  VkLayer_gfxreconstruct_perfetto.json  gfxr_events.cfg  perfetto_layer.cpp  perfetto_tracing_categories.h
perfetto/: CMakeLists.txt  perfetto_layer.cpp
